<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".PickTimeActivity">


    <TextView
        android:id="@+id/durationTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/kanit_semibold"
        android:text="@string/time_of_travel"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/timePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/kanit_semibold"
        android:text="@string/default_time"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/timePicker"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="@+id/timePicker"
        app:layout_constraintTop_toBottomOf="@+id/buttonGetTime" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:timePickerMode="spinner"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <Button
        android:id="@+id/buttonGetTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/get_time"
        app:layout_constraintEnd_toEndOf="@+id/timePicker"
        app:layout_constraintStart_toStartOf="@+id/timePicker"
        app:layout_constraintTop_toBottomOf="@+id/timePicker" />

    <ImageView
        android:id="@+id/clock_view"
        android:layout_width="60dp"
        android:layout_height="60dp"

        android:layout_marginTop="10dp"
        android:src="@drawable/time"
        app:layout_constraintEnd_toEndOf="@+id/buttonGetTime"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="@+id/buttonGetTime"
        app:layout_constraintTop_toBottomOf="@+id/buttonGetTime" />

    <Button
        android:id="@+id/btnCancelTime"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnBackTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/kanit_semibold"
        android:text="@string/back"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

</androidx.constraintlayout.widget.ConstraintLayout>