<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/btnBackDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/kanit_semibold"
        android:text="@string/back"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.0" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:datePickerMode="calendar"
        app:layout_constraintEnd_toEndOf="@+id/dateTitle"
        app:layout_constraintStart_toStartOf="@+id/dateTitle"
        app:layout_constraintTop_toBottomOf="@+id/dateTitle" />

    <Button
        android:id="@+id/buttonSelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/get_date"
        app:layout_constraintEnd_toEndOf="@+id/datePicker"
        app:layout_constraintStart_toStartOf="@+id/datePicker"
        app:layout_constraintTop_toBottomOf="@+id/datePicker" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonSelectDate"
        app:layout_constraintStart_toStartOf="@+id/buttonSelectDate"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectDate" />

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/kanit_semibold"
        android:text="@string/date_of_travel"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <Button
        android:id="@+id/btnContinueToTime"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/continue_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <Button
        android:id="@+id/btnCancelDate"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnContinueToTime"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>