<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity"
    android:background="@color/background">

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/headerView" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="160dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/usernameField" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/usernameField" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
        android:enabled="false"

        android:text="@string/action_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordField"
        app:layout_constraintStart_toStartOf="@+id/passwordField"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:text="@string/username"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/usernameField"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:text="@string/email"
        app:layout_constraintBaseline_toBaselineOf="@+id/emailField"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:text="@string/password"
        app:layout_constraintBaseline_toBaselineOf="@+id/passwordField"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="2dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="125dp" />

    <ImageView
        android:id="@+id/headerView"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/ic_carbon_tracer_header">

    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>